Compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BARRA
    COMENTARIO
    STRUCT
    WHAT

Grammar

Rule 0     S' -> arranque
Rule 1     arranque -> instruccionGeneral
Rule 2     instruccionGeneral -> instruccionGeneral inicio
Rule 3     instruccionGeneral -> inicio
Rule 4     inicio -> fnMain
Rule 5     inicio -> funciones
Rule 6     inicio -> funcionesParametros
Rule 7     fnMain -> FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 8     instrucciones -> instrucciones instruccion
Rule 9     instrucciones -> instruccion
Rule 10    instruccion -> imprimir
Rule 11    instruccion -> variable
Rule 12    instruccion -> asignacion
Rule 13    instruccion -> instruccionif
Rule 14    instruccion -> instruccionWhile
Rule 15    instruccion -> instruccionBreak
Rule 16    instruccion -> instruccionContinue
Rule 17    instruccion -> instruccionLoop
Rule 18    instruccion -> instruccionFor
Rule 19    instruccion -> funciones
Rule 20    instruccion -> llamadofuncion
Rule 21    instruccion -> funcionesParametros
Rule 22    instruccion -> instruccionReturn
Rule 23    instruccion -> alterValueArray
Rule 24    instruccion -> instruccionFor2
Rule 25    instruccion -> instruccionPush
Rule 26    instruccion -> instruccionInsert
Rule 27    instruccionBreak -> BREAK PUNTOCOMA
Rule 28    instruccionContinue -> CONTINUE PUNTOCOMA
Rule 29    instruccionReturn -> RETURN exp PUNTOCOMA
Rule 30    instruccionReturn -> RETURN exp PUNTO REMOVE PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
Rule 31    funciones -> FN ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 32    funciones -> FN ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 33    funcionesParametros -> FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 34    funcionesParametros -> FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 35    parametros -> parametros COMA instruccionParametro
Rule 36    parametros -> instruccionParametro
Rule 37    instruccionParametro -> ID DOSPUNTOS tipo
Rule 38    llamadofuncion -> ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOCOMA
Rule 39    llamadofuncion -> ID PARENTESISIZQUIERDO parametrosllamado PARENTESISDERECHO PUNTOCOMA
Rule 40    parametrosllamado -> parametrosllamado COMA instruccionLlamado
Rule 41    parametrosllamado -> instruccionLlamado
Rule 42    instruccionLlamado -> exp
Rule 43    instruccionPush -> ID PUNTO PUSH PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
Rule 44    instruccionPush -> ID PUNTO PUSH PARENTESISIZQUIERDO VEC NOT exp PARENTESISDERECHO PUNTOCOMA
Rule 45    instruccionInsert -> ID PUNTO INSERT PARENTESISIZQUIERDO exp COMA exp PARENTESISDERECHO PUNTOCOMA
Rule 46    instruccionCapacity -> ID PUNTO CAPACITY PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 47    imprimir -> PRINTLN NOT PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
Rule 48    imprimir -> PRINTLN NOT PARENTESISIZQUIERDO exp COMA listadoprint PARENTESISDERECHO PUNTOCOMA
Rule 49    listadoprint -> listadoprint COMA exp
Rule 50    listadoprint -> exp
Rule 51    listadoprint -> instruccionCapacity
Rule 52    variable -> LET MUT ID DOSPUNTOS tipo IGUAL exp PUNTOCOMA
Rule 53    variable -> LET MUT ID IGUAL exp PUNTOCOMA
Rule 54    variable -> LET ID DOSPUNTOS tipo IGUAL exp PUNTOCOMA
Rule 55    variable -> LET ID IGUAL exp PUNTOCOMA
Rule 56    variable -> LET MUT ID DOSPUNTOS tipo IGUAL VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOCOMA
Rule 57    variable -> LET MUT ID DOSPUNTOS tipo IGUAL VEC DOSPUNTOS DOSPUNTOS WITH_CAPACITY PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
Rule 58    variable -> LET MUT ID DOSPUNTOS tipo IGUAL VEC NOT exp PUNTOCOMA
Rule 59    variable -> LET ID IGUAL VEC NOT exp PUNTOCOMA
Rule 60    variable -> LET ID DOSPUNTOS VEC MENOR tipo MAYOR IGUAL VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOCOMA
Rule 61    asignacion -> ID IGUAL exp PUNTOCOMA
Rule 62    instruccionif -> IF exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO instruccionElse
Rule 63    instruccionElse -> ELSE LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 64    instruccionElse -> ELSE instruccionif
Rule 65    instruccionElse -> <empty>
Rule 66    instruccionWhile -> WHILE exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 67    instruccionLoop -> LOOP LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 68    instruccionFor -> FOR exp IN exp PUNTO PUNTO exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 69    instruccionFor2 -> FOR exp IN exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
Rule 70    listadoArreglo -> listadoArreglo COMA exp
Rule 71    listadoArreglo -> exp
Rule 72    alterValueArray -> ID list IGUAL exp PUNTOCOMA
Rule 73    list -> list CORCHETEDERECHO exp CORCHETEIZQUIERDO
Rule 74    list -> CORCHETEDERECHO exp CORCHETEIZQUIERDO
Rule 75    tipo -> I64
Rule 76    tipo -> F64
Rule 77    tipo -> BOOL
Rule 78    tipo -> STRING
Rule 79    tipo -> CHAR
Rule 80    tipo -> ID
Rule 81    tipo -> USIZE
Rule 82    tipo -> CORCHETEDERECHO tipo CORCHETEIZQUIERDO
Rule 83    tipo -> VEC MENOR tipo MAYOR
Rule 84    tipo -> AMPERSAND MUT tipo
Rule 85    tipo -> CORCHETEDERECHO tipo PUNTOCOMA exp CORCHETEIZQUIERDO
Rule 86    exp -> exp MAS exp
Rule 87    exp -> exp MENOS exp
Rule 88    exp -> exp MULTIPLICAR exp
Rule 89    exp -> exp DIV exp
Rule 90    exp -> exp PORCENTAJE exp
Rule 91    exp -> exp MAYOR exp
Rule 92    exp -> exp MENOR exp
Rule 93    exp -> exp MAYORIGUAL exp
Rule 94    exp -> exp MENORIGUAL exp
Rule 95    exp -> exp IGUALDAD exp
Rule 96    exp -> exp DIFERENTE exp
Rule 97    exp -> exp OR exp
Rule 98    exp -> exp AND exp
Rule 99    exp -> exp AS I64
Rule 100   exp -> exp AS F64
Rule 101   exp -> exp PUNTO TO_STRING PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 102   exp -> exp PUNTO ABS PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 103   exp -> exp PUNTO SQRT PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 104   exp -> exp PUNTO CLONE PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 105   exp -> NOT exp
Rule 106   exp -> MENOS exp
Rule 107   exp -> PARENTESISIZQUIERDO exp PARENTESISDERECHO
Rule 108   exp -> I64 DOSPUNTOS DOSPUNTOS POW PARENTESISIZQUIERDO exp COMA exp PARENTESISDERECHO
Rule 109   exp -> F64 DOSPUNTOS DOSPUNTOS POW PARENTESISIZQUIERDO exp COMA exp PARENTESISDERECHO
Rule 110   exp -> primitivo
Rule 111   exp -> ID PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 112   exp -> ID PARENTESISIZQUIERDO parametrosllamado PARENTESISDERECHO
Rule 113   exp -> CORCHETEDERECHO listadoArreglo CORCHETEIZQUIERDO
Rule 114   exp -> exp CORCHETEDERECHO exp CORCHETEIZQUIERDO
Rule 115   exp -> exp PUNTO LEN PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 116   exp -> exp PUNTO CONTAINS PARENTESISIZQUIERDO AMPERSAND exp PARENTESISDERECHO
Rule 117   exp -> VEC NOT CORCHETEDERECHO exp PUNTOCOMA exp CORCHETEIZQUIERDO
Rule 118   primitivo -> ENTERO
Rule 119   primitivo -> DECIMAL
Rule 120   primitivo -> TRUE
Rule 121   primitivo -> FALSE
Rule 122   primitivo -> CADENA
Rule 123   primitivo -> CARACTER
Rule 124   primitivo -> ID

Terminals, with rules where they appear

ABS                  : 102
AMPERSAND            : 84 116
AND                  : 98
AS                   : 99 100
BARRA                : 
BOOL                 : 77
BREAK                : 27
CADENA               : 122
CAPACITY             : 46
CARACTER             : 123
CHAR                 : 79
CLONE                : 104
COMA                 : 35 40 45 48 49 70 108 109
COMENTARIO           : 
CONTAINS             : 116
CONTINUE             : 28
CORCHETEDERECHO      : 73 74 82 85 113 114 117
CORCHETEIZQUIERDO    : 73 74 82 85 113 114 117
DECIMAL              : 119
DIFERENTE            : 96
DIV                  : 89
DOSPUNTOS            : 37 52 54 56 56 56 57 57 57 58 60 60 60 108 108 109 109
ELSE                 : 63 64
ENTERO               : 118
F64                  : 76 100 109
FALSE                : 121
FN                   : 7 31 32 33 34
FOR                  : 68 69
I64                  : 75 99 108
ID                   : 31 32 33 34 37 38 39 43 44 45 46 52 53 54 55 56 57 58 59 60 61 72 80 111 112 124
IF                   : 62
IGUAL                : 52 53 54 55 56 57 58 59 60 61 72
IGUALDAD             : 95
IN                   : 68 69
INSERT               : 45
LEN                  : 115
LET                  : 52 53 54 55 56 57 58 59 60
LLAVEDERECHO         : 7 31 32 33 34 62 63 66 67 68 69
LLAVEIZQUIERDO       : 7 31 32 33 34 62 63 66 67 68 69
LOOP                 : 67
MAIN                 : 7
MAS                  : 86
MAYOR                : 60 83 91
MAYORIGUAL           : 93
MENOR                : 60 83 92
MENORIGUAL           : 94
MENOS                : 87 106
MULTIPLICAR          : 88
MUT                  : 52 53 56 57 58 84
NEW                  : 56 60
NOT                  : 44 47 48 58 59 105 117
OR                   : 97
PARENTESISDERECHO    : 7 30 31 32 33 34 38 39 43 44 45 46 47 48 56 57 60 101 102 103 104 107 108 109 111 112 115 116
PARENTESISIZQUIERDO  : 7 30 31 32 33 34 38 39 43 44 45 46 47 48 56 57 60 101 102 103 104 107 108 109 111 112 115 116
PORCENTAJE           : 90
POW                  : 108 109
PRINTLN              : 47 48
PUNTO                : 30 43 44 45 46 68 68 101 102 103 104 115 116
PUNTOCOMA            : 27 28 29 30 38 39 43 44 45 47 48 52 53 54 55 56 57 58 59 60 61 72 85 117
PUSH                 : 43 44
REMOVE               : 30
RETURN               : 29 30
SQRT                 : 103
STRING               : 78
STRUCT               : 
TIPORETURN           : 32 34
TO_STRING            : 101
TRUE                 : 120
USIZE                : 81
VEC                  : 44 56 57 58 59 60 60 83 117
WHAT                 : 
WHILE                : 66
WITH_CAPACITY        : 57
error                : 

Nonterminals, with rules where they appear

alterValueArray      : 23
arranque             : 0
asignacion           : 12
exp                  : 29 30 30 42 43 44 45 45 47 48 49 50 52 53 54 55 57 58 59 61 62 66 68 68 68 69 69 70 71 72 73 74 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 100 101 102 103 104 105 106 107 108 108 109 109 114 114 115 116 116 117 117
fnMain               : 4
funciones            : 5 19
funcionesParametros  : 6 21
imprimir             : 10
inicio               : 2 3
instruccion          : 8 9
instruccionBreak     : 15
instruccionCapacity  : 51
instruccionContinue  : 16
instruccionElse      : 62
instruccionFor       : 18
instruccionFor2      : 24
instruccionGeneral   : 1 2
instruccionInsert    : 26
instruccionLlamado   : 40 41
instruccionLoop      : 17
instruccionParametro : 35 36
instruccionPush      : 25
instruccionReturn    : 22
instruccionWhile     : 14
instrucciones        : 7 8 31 32 33 34 62 63 66 67 68 69
instruccionif        : 13 64
list                 : 72 73
listadoArreglo       : 70 113
listadoprint         : 48 49
llamadofuncion       : 20
parametros           : 33 34 35
parametrosllamado    : 39 40 112
primitivo            : 110
tipo                 : 32 34 37 52 54 56 57 58 60 82 83 84 85
variable             : 11

Parsing method: LALR

state 0

    (0) S' -> . arranque
    (1) arranque -> . instruccionGeneral
    (2) instruccionGeneral -> . instruccionGeneral inicio
    (3) instruccionGeneral -> . inicio
    (4) inicio -> . fnMain
    (5) inicio -> . funciones
    (6) inicio -> . funcionesParametros
    (7) fnMain -> . FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (31) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    FN              shift and go to state 7

    arranque                       shift and go to state 1
    instruccionGeneral             shift and go to state 2
    inicio                         shift and go to state 3
    fnMain                         shift and go to state 4
    funciones                      shift and go to state 5
    funcionesParametros            shift and go to state 6

state 1

    (0) S' -> arranque .



state 2

    (1) arranque -> instruccionGeneral .
    (2) instruccionGeneral -> instruccionGeneral . inicio
    (4) inicio -> . fnMain
    (5) inicio -> . funciones
    (6) inicio -> . funcionesParametros
    (7) fnMain -> . FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (31) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    $end            reduce using rule 1 (arranque -> instruccionGeneral .)
    FN              shift and go to state 7

    inicio                         shift and go to state 8
    fnMain                         shift and go to state 4
    funciones                      shift and go to state 5
    funcionesParametros            shift and go to state 6

state 3

    (3) instruccionGeneral -> inicio .

    FN              reduce using rule 3 (instruccionGeneral -> inicio .)
    $end            reduce using rule 3 (instruccionGeneral -> inicio .)


state 4

    (4) inicio -> fnMain .

    FN              reduce using rule 4 (inicio -> fnMain .)
    $end            reduce using rule 4 (inicio -> fnMain .)


state 5

    (5) inicio -> funciones .

    FN              reduce using rule 5 (inicio -> funciones .)
    $end            reduce using rule 5 (inicio -> funciones .)


state 6

    (6) inicio -> funcionesParametros .

    FN              reduce using rule 6 (inicio -> funcionesParametros .)
    $end            reduce using rule 6 (inicio -> funcionesParametros .)


state 7

    (7) fnMain -> FN . MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (31) funciones -> FN . ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> FN . ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> FN . ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> FN . ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    MAIN            shift and go to state 9
    ID              shift and go to state 10


state 8

    (2) instruccionGeneral -> instruccionGeneral inicio .

    FN              reduce using rule 2 (instruccionGeneral -> instruccionGeneral inicio .)
    $end            reduce using rule 2 (instruccionGeneral -> instruccionGeneral inicio .)


state 9

    (7) fnMain -> FN MAIN . PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    PARENTESISIZQUIERDO shift and go to state 11


state 10

    (31) funciones -> FN ID . PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> FN ID . PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> FN ID . PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> FN ID . PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    PARENTESISIZQUIERDO shift and go to state 12


state 11

    (7) fnMain -> FN MAIN PARENTESISIZQUIERDO . PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    PARENTESISDERECHO shift and go to state 13


state 12

    (31) funciones -> FN ID PARENTESISIZQUIERDO . PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> FN ID PARENTESISIZQUIERDO . PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (33) funcionesParametros -> FN ID PARENTESISIZQUIERDO . parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> FN ID PARENTESISIZQUIERDO . parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (35) parametros -> . parametros COMA instruccionParametro
    (36) parametros -> . instruccionParametro
    (37) instruccionParametro -> . ID DOSPUNTOS tipo

    PARENTESISDERECHO shift and go to state 15
    ID              shift and go to state 14

    parametros                     shift and go to state 16
    instruccionParametro           shift and go to state 17

state 13

    (7) fnMain -> FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO . LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    LLAVEIZQUIERDO  shift and go to state 18


state 14

    (37) instruccionParametro -> ID . DOSPUNTOS tipo

    DOSPUNTOS       shift and go to state 19


state 15

    (31) funciones -> FN ID PARENTESISIZQUIERDO PARENTESISDERECHO . LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> FN ID PARENTESISIZQUIERDO PARENTESISDERECHO . TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO

    LLAVEIZQUIERDO  shift and go to state 20
    TIPORETURN      shift and go to state 21


state 16

    (33) funcionesParametros -> FN ID PARENTESISIZQUIERDO parametros . PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> FN ID PARENTESISIZQUIERDO parametros . PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (35) parametros -> parametros . COMA instruccionParametro

    PARENTESISDERECHO shift and go to state 22
    COMA            shift and go to state 23


state 17

    (36) parametros -> instruccionParametro .

    PARENTESISDERECHO reduce using rule 36 (parametros -> instruccionParametro .)
    COMA            reduce using rule 36 (parametros -> instruccionParametro .)


state 18

    (7) fnMain -> FN MAIN PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO . instrucciones LLAVEDERECHO
    (8) instrucciones -> . instrucciones instruccion
    (9) instrucciones -> . instruccion
    (10) instruccion -> . imprimir
    (11) instruccion -> . variable
    (12) instruccion -> . asignacion
    (13) instruccion -> . instruccionif
    (14) instruccion -> . instruccionWhile
    (15) instruccion -> . instruccionBreak
    (16) instruccion -> . instruccionContinue
    (17) instruccion -> . instruccionLoop
    (18) instruccion -> . instruccionFor
    (19) instruccion -> . funciones
    (20) instruccion -> . llamadofuncion
    (21) instruccion -> . funcionesParametros
    (22) instruccion -> . instruccionReturn
    (23) instruccion -> . alterValueArray
    (24) instruccion -> . instruccionFor2
    (25) instruccion -> . instruccionPush
    (26) instruccion -> . instruccionInsert
    (47) imprimir -> . PRINTLN NOT PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
    (48) imprimir -> . PRINTLN NOT PARENTESISIZQUIERDO exp COMA listadoprint PARENTESISDERECHO PUNTOCOMA
    (52) variable -> . LET MUT ID DOSPUNTOS tipo IGUAL exp PUNTOCOMA
    (53) variable -> . LET MUT ID IGUAL exp PUNTOCOMA
    (54) variable -> . LET ID DOSPUNTOS tipo IGUAL exp PUNTOCOMA
    (55) variable -> . LET ID IGUAL exp PUNTOCOMA
    (56) variable -> . LET MUT ID DOSPUNTOS tipo IGUAL VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOCOMA
    (57) variable -> . LET MUT ID DOSPUNTOS tipo IGUAL VEC DOSPUNTOS DOSPUNTOS WITH_CAPACITY PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
    (58) variable -> . LET MUT ID DOSPUNTOS tipo IGUAL VEC NOT exp PUNTOCOMA
    (59) variable -> . LET ID IGUAL VEC NOT exp PUNTOCOMA
    (60) variable -> . LET ID DOSPUNTOS VEC MENOR tipo MAYOR IGUAL VEC DOSPUNTOS DOSPUNTOS NEW PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOCOMA
    (61) asignacion -> . ID IGUAL exp PUNTOCOMA
    (62) instruccionif -> . IF exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO instruccionElse
    (66) instruccionWhile -> . WHILE exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (27) instruccionBreak -> . BREAK PUNTOCOMA
    (28) instruccionContinue -> . CONTINUE PUNTOCOMA
    (67) instruccionLoop -> . LOOP LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (68) instruccionFor -> . FOR exp IN exp PUNTO PUNTO exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (31) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (32) funciones -> . FN ID PARENTESISIZQUIERDO PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (38) llamadofuncion -> . ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOCOMA
    (39) llamadofuncion -> . ID PARENTESISIZQUIERDO parametrosllamado PARENTESISDERECHO PUNTOCOMA
    (33) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (34) funcionesParametros -> . FN ID PARENTESISIZQUIERDO parametros PARENTESISDERECHO TIPORETURN tipo LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (29) instruccionReturn -> . RETURN exp PUNTOCOMA
    (30) instruccionReturn -> . RETURN exp PUNTO REMOVE PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
    (72) alterValueArray -> . ID list IGUAL exp PUNTOCOMA
    (69) instruccionFor2 -> . FOR exp IN exp LLAVEIZQUIERDO instrucciones LLAVEDERECHO
    (43) instruccionPush -> . ID PUNTO PUSH PARENTESISIZQUIERDO exp PARENTESISDERECHO PUNTOCOMA
    (44) instruccionPush -> . ID PUNTO PUSH PARENTESISIZQUIERDO VEC NOT exp PARENTESISDERECHO PUNTOCOMA
    (45) instruccionInsert -> . ID PUNTO INSERT PARENTESISIZQUIERDO exp COMA exp PARENTESISDERECHO PUNTOCOMA

    PRINTLN         shift and go to state 44
    LET             shift and go to state 45
    ID              shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    BREAK           shift and go to state 49
    CONTINUE        shift and go to state 50
    LOOP            shift and go to state 51
    FOR             shift and go to state 52
    FN              shift and go to state 24
    RETURN          shift and go to state 53

    instrucciones                  shift and go to state 25
    instruccion                    shift and go to state 26
    imprimir                       shift and go to state 27
    variable                       shift and go to state 28
    asignacion                     shift and go to state 29
    instruccionif                  shift and go to state 30
    instruccionWhile               shift and go to state 31
    instruccionBreak               shift and go to state 32
    instruccionContinue            shift and go to state 33
    instruccionLoop                shift and go to state 34
    instruccionFor                 shift and go to state 35
    funciones                      shift and go to state 36
    llamadofuncion                 shift and go to state 37
    funcionesParametros            shift and go to state 38
    instruccionReturn              shift and go to state 39
    alterValueArray                shift and go to state 40
    instruccionFor2                shift and go to state 41
    instruccionPush                shift and go to state 42
    instruccionInsert              shift and go to state 43

state 19

    (37) instruccionParametro -> ID DOSPUNTOS . tipo
    (75) tipo -> . I64
    (76) tipo -> . F64
    (77) tipo -> . BOOL
    (78) tipo -> . STRING
    (79) tipo -> . CHAR
    (80) tipo -> . ID
    (81) tipo -> . USIZE
    (82) tipo -> . CORCHETEDERECHO tipo CORCHETEIZQUIERDO
    (83) tipo -> . VEC MENOR tipo MAYOR
    (84) tipo -> . AMPERSAND MUT tipo
    (85) tipo -> . CORCHETEDERECHO tipo PUNTOCOMA exp CORCHETEIZQUIERDO

    I64             shift and go to state 56
    F64             shift and go to state 57
    BOOL            shift and go to state 58
    STRING          shift and go to state 59
    CHAR            shift and go to state 60
    ID              shift and go to state 54
    USIZE           shift and go to state 61
    CORCHETEDERECHO shift and go to state 62
    VEC             shift and go to state 63
    AMPERSAND       shift and go to state 64

    tipo                           shift and go to state 55

state 20
